# n8n-worklfow-collection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
pages/: app.js  index.html  node-search-index.json  styles.css  theme.css  workflow.css
pages/nodes/: app.js  index.html  node.css
pages/workflow-mermaid/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  (+24 more)
src/n8n_workflow_search/: __init__.py  cli.py  node_icons.py  search.py  web.py
src/n8n_workflow_search/static/: app.js  index.html  styles.css  theme.css  workflow.css
src/n8n_workflow_search/static/nodes/: app.js  index.html  node.css
tests/: temp-script.py  test_search.py
